trying to improve tuyad and tuyactl with asyncio

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,10 @@ description = "A MCP server for Tuya devices"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
- "flask>=3.1.0",
+ "colour>=0.1.5",
  "mcp[cli]>=1.2.1",
  "numpy>=2.2.2",
+ "quart>=0.20.0",
  "scipy>=1.15.1",
  "tinytuya>=1.16.1",
 ]
